--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>tensquare_common</module>
+        <module>tensquare_base</module>
+        <module>tensquare_recruit</module>
+        <module>tensquare_qa</module>
+        <module>tensquare_article</module>
+
     </modules>
     <packaging>pom</packaging>
 
