--- a/tensquare_gathering/pom.xml
+++ b/tensquare_gathering/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>tensquare_parent52</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>tensquare_article</artifactId>
+  <artifactId>tensquare_gathering</artifactId>
   <dependencies>
  		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -20,14 +20,5 @@
 			<artifactId>tensquare_common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-	  <dependency>
-		  <groupId>org.springframework.boot</groupId>
-		  <artifactId>spring-boot-starter-data-redis</artifactId>
-	  </dependency>
-	  <dependency>
-		  <groupId>org.springframework.boot</groupId>
-		  <artifactId>spring-boot-starter-data-redis</artifactId>
-		  <version>2.0.1.RELEASE</version>
-	  </dependency>
   </dependencies>  
 </project>
