--- a/tensquare_article/src/main/resources/application.yml
+++ b/tensquare_article/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
     show-sql: true
   redis:
     host: 192.168.175.128
+  data:
+    mongodb:
+      database: recruitdb
+      host: 192.168.175.128
