更新Spring-cloud微服务通讯的工具的使用

--- a/tensquare_base/src/main/resources/application.yml
+++ b/tensquare_base/src/main/resources/application.yml
@@ -14,3 +14,9 @@ spring:
     database: mysql
     show-sql: true
     generate-ddl: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:6768/eureka/
+  instance:
+    prefer-ip-address: true #适用于方便调试，不加只能本地调试，不能服务器调试？？
