--- a/tensquare_qa/pom.xml
+++ b/tensquare_qa/pom.xml
@@ -26,5 +26,15 @@
 		  <version>1.0-SNAPSHOT</version>
 		  <scope>compile</scope>
 	  </dependency>
+
+	  <dependency>
+		  <groupId>org.springframework.cloud</groupId>
+		  <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.springframework.cloud</groupId>
+		  <artifactId>spring-cloud-starter-openfeign</artifactId>
+	  </dependency>
+
   </dependencies>  
 </project>
